--- a/More_Math_Programming_Problems.ipynb
+++ b/More_Math_Programming_Problems.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.3"
     },
     "colab": {
-      "name": "LIVE_3_More_Math_Programming_Problems.ipynb",
+      "name": "More_Math_Programming_Problems.ipynb",
       "provenance": []
     }
   },
@@ -31,7 +31,7 @@
         "id": "99EnuCRf91bc"
       },
       "source": [
-        "### LIVE 3 :  Mathematical problems-II\n",
+        "### Mathematical problems-II\n",
         "\n",
         "- contiuation from the previoous session\n",
         " "
@@ -1188,7 +1188,7 @@
         "4. SciPy and NumPy reference.\n",
         "\n",
         "\n",
-        "### Next live session: Strings and Regular Expressions"
+        ""
       ]
     },
     {
